bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -475,6 +475,13 @@ mat-toolbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.role-shell mat-form-field {
+    margin-right: 0;
+    width: 75%;
 }
 
 .checkboxShell {
